name:                stageless
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/glaebhoerl/stageless
license:             MIT
license-file:        LICENSE
author:              Gábor Lehel
maintainer:          glaebhoerl@gmail.com
copyright:           2017 Gábor Lehel
category:            Compilers
build-type:          Simple
cabal-version:       >=1.10
-- extra-source-files:  README.md

executable stageless
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       MyPrelude, Token, AST, Name
  default-language:    Haskell2010
  default-extensions:  ApplicativeDo,
                       AutoDeriveTypeable,
                       BangPatterns,
                       BinaryLiterals,
                       ConstrainedClassMethods,
                       ConstraintKinds,
                       DataKinds,
                       DefaultSignatures,
                       DeriveFoldable,
                       DeriveFunctor,
                       DeriveGeneric,
                       DeriveTraversable,
                       EmptyCase,
                       ExistentialQuantification,
                       FlexibleContexts,
                       FlexibleInstances,
                       GADTs,
                       GeneralizedNewtypeDeriving,
                       InstanceSigs,
                       KindSignatures,
                       LambdaCase,
                       MultiParamTypeClasses,
                       NamedFieldPuns,
                       NegativeLiterals,
                       NoImplicitPrelude,
                       OverloadedStrings,
                       PartialTypeSignatures,
                       PatternSynonyms,
                       PolyKinds,
                       RankNTypes,
                       RecursiveDo,
                       ScopedTypeVariables,
                       StandaloneDeriving,
                       TupleSections,
                       TypeApplications,
                       TypeFamilies,
                       TypeOperators,
                       TypeSynonymInstances,
                       ViewPatterns
-- NOTABLY MISSING: CPP, DeriveAnyClass, FunctionalDependencies, RecordWildCards, RoleAnnotations, TemplateHaskell, TypeInType, UndecidableInstances, UndecidableSuperClasses
  build-depends:       base >= 4.7 && < 5,
                       bound,
                       bytestring,
                       containers,
                       Earley,
                       llvm-hs,
                       llvm-hs-pure,
                       loc,
                       prettyprinter,
                       text,
                       transformers
  ghc-options:         -W -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates

source-repository head
  type:     git
  location: https://github.com/glaebhoerl/stageless

