name:                stageless
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/glaebhoerl/stageless
license:             MIT
license-file:        LICENSE
author:              Gábor Lehel
maintainer:          glaebhoerl@gmail.com
copyright:           2017 Gábor Lehel
category:            Compilers
build-type:          Simple
cabal-version:       >=1.10
-- extra-source-files:  README.md

executable stageless
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       MyPrelude, Token, AST, Name

-- Here we define the language dialect we will be using:
  default-language:    Haskell2010
  default-extensions:  ApplicativeDo,
                       AutoDeriveTypeable,
                       BangPatterns,
                       BinaryLiterals,
                       ConstrainedClassMethods,
                       ConstraintKinds,
                       DataKinds,
                       DefaultSignatures,
                       DeriveFoldable,
                       DeriveFunctor,
                       DeriveGeneric,
                       DeriveTraversable,
                       EmptyCase,
                       ExistentialQuantification,
                       FlexibleContexts,
                       FlexibleInstances,
                       GADTs,
                       GeneralizedNewtypeDeriving,
                       InstanceSigs,
                       KindSignatures,
                       LambdaCase,
                       --^^ <3
                       MultiParamTypeClasses,
                       NamedFieldPuns,
                       NegativeLiterals,
                       NoImplicitPrelude,
                       --^^ `import MyPrelude` instead!
                       OverloadedStrings,
                       PartialTypeSignatures,
                       PatternSynonyms,
                       PolyKinds,
                       RankNTypes,
                       RecursiveDo,
                       ScopedTypeVariables,
                       StandaloneDeriving,
                       TupleSections,
                       TypeApplications,
                       TypeFamilies,
                       TypeOperators,
                       TypeSynonymInstances,
                       ViewPatterns

-- NOTABLY MISSING:
--     CPP, TemplateHaskell:
--         Would like to avoid these if at all possible. Use a local `LANGUAGE` pragma if/where we can't.
--     DeriveAnyClass:
--         Would be nice, but in GHC 8.0 it's badly implemented and conflicts with GeneralizedNewtypeDeriving.
--     FunctionalDependencies:
--         Use TypeFamilies instead.
--     OverloadedLists:
--         I got a type ambiguity error that I think was caused by this, and otherwise haven't needed it.
--     RecordWildCards:
--         Tryna keep it obvious where names are coming from.
--     RoleAnnotations:
--         Seems niche and it's quite possible we won't ever need it.
--     TypeInType:
--         Very new and fancy and powerful. Give it some time.
--     UndecidableInstances, UndecidableSuperClasses:
--         Not evil, but use a local `LANGUAGE` pragma to call it out if it's necessary.

  build-depends:       base >= 4.7 && < 5,
                       bound,
                       bytestring,
                       containers,
                       Earley,
                       llvm-hs,
                       llvm-hs-pure,
                       loc,
                       prettyprinter,
                       text,
                       transformers
  ghc-options:         -W -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates

source-repository head
  type:     git
  location: https://github.com/glaebhoerl/stageless

